tests/fails/f25.t
if not require("fail") then return end

terra foo()
    var a,b,c = 3,4
end
foo()
